# osm-wayback

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  HISTORICAL_SCHEMA_V1.md  Historical_Schema.md  README.md  add_geometry.cpp  add_history.cpp  add_tags.cpp  benchmarking  benchmarking-2017-07-09.md  build_lookup_index.cpp  build_tag_lookup.cpp  cmake_install.cmake  compile_commands.json  db-pbf.hpp  db.hpp  json_encoding.hpp  pbf_encoding.hpp  pbf_json_encoding.hpp  rebuild  remake  run-cities  run.sh  us-cities.json
cmake/: common.cmake
example/: history_of_albany.osh.pbf
geometry-prototyping/: GeometryReconstruction.md  README.md  debug.py  geometry-builder.js  index.js  mbview.html  node-geometry-builder.js  node-history-builder.js  package-lock.json  package.json  relation-history-builder.js  way-history-builder.js  worker.js
geometry-prototyping/geom_builders/: node-history-builder.js
geometry-reconstruction/: README.md  index.js  map-geom-reconstruction.js  package.json  reconstructing-minor-versions.md
geometry-reconstruction/element-reconstruction/: relation-history-builder.js  way-history-builder.js
geometry-reconstruction/test/: buildings.geojsonseq  problem  tampa-test.history.geometries.head  tampa-test.history.geometries.head100
scripts/: travis_script.sh
test/: run-all  run-one  validate  validation_criteria.json
test/current-pbf/: Alameda_SF.osm.pbf  CyberJaya.osm.pbf  KualaLumpur.osm.pbf  Phuket.osm.pbf
test/geojson/: CyberJaya.geojsonl  Phuket.geojsonl
test/history-pbf/: Alameda_SF.osh.pbf  Cyberjaya.osh.pbf  Phuket.osh.pbf
test/scripts/: run-file.sh
